@@ -18,6 +18,7 @@ BUG FIXES
  * #261: (FTPS) SSL shutdown does not properly work on Windows.
  * #280: (Python 2) unable to complete directory listing with invalid UTF8
          characters. (patch by dn@devicenull.org)
+ * #283: always use a single 'pyftpdlib' logger.
 
 
 Version: 1.3.0 - Date: 2013-11-07
